# Vmos-api

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
docs/api-reference/: container-api.md  control-api.md
docs/guides/: ai-agent-integration.md  authentication.md  getting-started.md
examples/python/: basic_usage.py  device_control.py  instance_lifecycle.py
openapi/: vmos-api.yaml
skills/vmos-titan/: SKILL.md
src/python/: pyproject.toml
src/python/vmos_api/: __init__.py  client.py  exceptions.py  host.py
src/python/vmos_api/auth/: __init__.py  hmac_auth.py
src/python/vmos_api/container/: __init__.py  client.py  models.py
src/python/vmos_api/control/: __init__.py  client.py  models.py
src/typescript/: package.json  tsconfig.json
src/typescript/src/: auth.ts  client.ts  container.ts  control.ts  errors.ts  index.ts  types.ts
